--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="header">
             <ul id="nav">
                 <li><a href="">Home</a></li>
-                <li><a href="">Relationship</a></li>
+                <li><a href="">Relationships</a></li>
                 <li><a href="">Travel</a></li>
                 <li><a href="">Contact</a></li>
                 <li>
