--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
         <!-- End Search Button -->
         </div>
         <div id="slider">
-
+            <div class="text-content">
+                <h2 class="text-heading">Tam Chúc</h2>
+                <p class="text-description">Kỷ niệm đầu năm 2022</p>
+            </div>
         </div>
 
         <div id="content">
