Add team section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,42 @@
         </div>
 
         <div id="content">
+            <!-- About section -->
+            <div class="content-section">
+                <h2 class="section-heading">PROFILE</h2>
+                <p class="section-sub-heading">Developer</p>
+                <p class="about-text">Thế giới này bao dung nhưng thành công không dành cho người im lặng. Mỗi người cúng ta đều có thể là anh hùng ở một mặt nào đó nhưng cũng có thể là kẻ hèn nhát ở mặt khác. Con đường dễ dàng nhất càng đi càng khó khăn, con đường khó khăn nhất càng đi càng dễ dàng.</p>
+                <!-- Show team  -->
+                <div class="members-list">
+                    <div class="member-item">
+                        <p class="member-name">Name</p>
+                        <img src="./assets/img/band/avt1.png" alt="Image of me"class="member-img">
+                    </div>
+                    <div class="member-item">
+                        <p class="member-name">Name</p>
+                        <img src="./assets/img/band/avt1.png" alt="Image of me"class="member-img">
+                    </div>
+                    <div class="member-item">
+                        <p class="member-name">Name</p>
+                        <img src="./assets/img/band/avt1.png" alt="Image of me"class="member-img">
+                    </div>
+                    <div class="clear"></div>
+                </div>
+            </div>
 
+            <!-- Tour section -->
+            <div class="content-section">
+                <h2 class="section-heading">PROFILE</h2>
+                <p class="section-sub-heading">Developer</p>
+                
+            </div>
+
+            <!-- Contact section -->
+            <div class="content-section">
+                <h2 class="section-heading">PROFILE</h2>
+                <p class="section-sub-heading">Developer</p>
+                
+            </div>
         </div>
 
         <div id="footer">
