--- a/index.html
+++ b/index.html
@@ -69,10 +69,18 @@
             </div>
 
             <!-- Tour section -->
-            <div class="content-section">
-                <h2 class="section-heading">PROFILE</h2>
-                <p class="section-sub-heading">Developer</p>
-                
+            <div class="tour-section">
+                <div class="content-section">
+                    <h2 class="section-heading text-white">BOOKING ME</h2>
+                    <p class="section-sub-heading text-white">Remember to book your tickets!</p>
+                    
+                    <ul class="tickets-list">
+                        <li>September <span class="sold-out">Sold out</span></li>
+                        <li>October <span class="sold-out">Sold out</span></li>
+                        <li>November <span class="quantity">3</span></li>
+                    </ul>
+                </div>
+
             </div>
 
             <!-- Contact section -->
