--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
                 <!-- Show team  -->
                 <div class="members-list">
                     <div class="member-item">
-                        <p class="member-name">Name</p>
+                        <p class="member-name">HUST</p>
                         <img src="./assets/img/band/avt1.png" alt="Image of me"class="member-img">
                     </div>
                     <div class="member-item">
-                        <p class="member-name">Name</p>
+                        <p class="member-name">THAI BINH</p>
                         <img src="./assets/img/band/avt1.png" alt="Image of me"class="member-img">
                     </div>
                     <div class="member-item">
-                        <p class="member-name">Name</p>
+                        <p class="member-name">FC MAITOC</p>
                         <img src="./assets/img/band/avt1.png" alt="Image of me"class="member-img">
                     </div>
                     <div class="clear"></div>
