--- a/index.html
+++ b/index.html
@@ -122,32 +122,33 @@
                     <!-- Places -->
                     <div class="places-list">
                         <div class="place-item">
-                            <img src="./assets/img/places/old traford.jpg" alt="old trafford stadium" class="place-img">
+                            <img src="./assets/img/places/chelsea.jpg" alt="old trafford stadium" class="place-img">
                             <div class="place-body">
-                                <h3 class="place-heading">Manchester</h3>
-                                <p class="place-time">Fri 27 Sep 2022</p>
-                                <p class="place-desc">FC MaiToc & Manchester United</p>
-                                <a href="#" class="place-buyy-">Buy Tickets</a>btn
+                                <h3 class="place-heading">Lon Don - England</h3>
+                                <p class="place-time">Sat 28 Oct 2022</p>
+                                <p class="place-desc">FC MaiToc & FC Chelsea</p>
+                                <a href="#" class="place-buy-btn">Buy Tickets</a>
                             </div>
                         </div>
                         <div class="place-item">
-                            <img src="./assets/img/places/chelsea.jpg" alt="old trafford stadium" class="place-img">
+                            <img src="./assets/img/places/old traford.jpg" alt="old trafford stadium" class="place-img">
                             <div class="place-body">
-                                <h3 class="place-heading">Lon Don</h3>
-                                <p class="place-time">Sat 28 Oct 2022</p>
-                                <p class="place-desc">FC MaiToc & Chelsea</p>
-                                <a href="#" class="place-buyy-">Buy Tickets</a>btn
+                                <h3 class="place-heading">Manchester - England</h3>
+                                <p class="place-time">Fri 27 Sep 2022</p>
+                                <p class="place-desc">FC MaiToc & FC Man United</p>
+                                <a href="#" class="place-buy-btn">Buy Tickets</a>
                             </div>
                         </div>
                         <div class="place-item">
                             <img src="./assets/img/places/bernabeu.jpg" alt="old trafford stadium" class="place-img">
                             <div class="place-body">
-                                <h3 class="place-heading">Madrid</h3>
-                                <p class="place-time">Sun 29 Dec 2022</p>
-                                <p class="place-desc">FC MaiToc & Real Madrid</p>
-                                <a href="#" class="place-buyy-">Buy Tickets</a>btn
+                                <h3 class="place-heading">Madrid - Spain</h3>
+                                <p class="place-time">Sun 29  2022</p>
+                                <p class="place-desc">FC MaiToc & FC Real Madrid</p>
+                                <a href="#" class="place-buy-btn">Buy Tickets</a>
                             </div>
                         </div>
+                        <div class="clear"></div>
                     </div>
                 </div>
 
