Add contact & footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FC Mai Toc</title>
+    <link rel="icon" href="./assets/img/favicon/ball.jpg" type="image/x-icon"/>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/font/themify-icons-font/themify-icons/themify-icons.css">
 </head>
@@ -13,18 +14,18 @@
         <div id="header">
         <!-- Begin Nav -->
             <ul id="nav">
-                <li><a href="">Home</a></li>
-                <li><a href="">Members</a></li>
-                <li><a href="">Tour</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#members">Members</a></li>
+                <li><a href="#tour">Tour</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li>
                     <a href="">More
                         <i class="nav-arrow-down ti-angle-down"></i>
                     </a>
                     <ul class="subnav">
-                        <li><a href="">History</a></li>
-                        <li><a href="">Music</a></li>
-                        <li><a href="">Photo</a></li>
+                        <li><a href="#">History</a></li>
+                        <li><a href="#">Music</a></li>
+                        <li><a href="#">Photo</a></li>
                     </ul>
                 </li>
             </ul>
@@ -46,68 +47,70 @@
 
         <div id="content">
             <!-- About section -->
-            <div class="content-section">
+            <div id="members" class="content-section">
                 <h2 class="section-heading">FC MAI TOC</h2>
                 <p class="section-sub-heading">We are family</p>
                 <p class="about-text">FC MAI TOC là đội bóng gồm các anh em trong dòng họ Mai Tộc, thuộc xã Phong Châu, huyện Đông Hưng, tỉnh Thái Bình. Với bề dày lịch sử và kinh nghiệm thi đấu các giải trong và ngoài nước của mình, FC Mai Tộc đang ngày một lớn mạnh và dần trở thành một trong những đội bóng hàng đầu khu vực.</p>
                 <!-- Show team  -->
-                <div class="members-list">
-                    <div class="member-item">
+                <div class="row members-list">
+                    <div class="column column-third text-center">
                         <p class="member-name">ST. Cuong Mai</p>
                         <img src="./assets/img/fc/cuongmai.jpg" alt="Image of FC" class="member-img">
                     </div>
-                    <div class="member-item">
+                    <div class="column column-third text-center">
                         <p class="member-name">CB. Huy Mai</p>
                         <img src="./assets/img/fc/huy_n.jpg" alt="Image of FC" class="member-img">
                     </div>
-                    <div class="member-item">
+                    <div class="column column-third text-center">
                         <p class="member-name">CM. Thang Mai</p>
                         <img src="./assets/img/fc/me.png" alt="Image of FC" class="member-img">
                     </div>
                     <hr>
 
-                    <div class="member-item">
+                    <div class="column column-third text-center">
                         <p class="member-name">LB. Son Bui</p>
                         <img src="./assets/img/fc/son.jpg" alt="Image of FC" class="member-img">
                     </div>
-                    <div class="member-item">
+                    <div class="column column-third text-center">
                         <p class="member-name">GK. Duong Mai</p>
                         <img src="./assets/img/fc/duong.jpg" alt="Image of FC" class="member-img">
                     </div>
-                    <div class="member-item">
+                    <div class="column column-third text-center">
                         <p class="member-name">RM. Hieu Vu</p>
                         <img src="./assets/img/fc/hieu.jpg" alt="Image of FC" class="member-img">
                     </div>
                     <hr>
 
-                    <div class="member-item">
+                    <div class="column column-third text-center">
                         <p class="member-name">LB. Mai Nguyen</p>
                         <img src="./assets/img/fc/nguyen_n.jpg" alt="Image of FC" class="member-img">
                     </div>
-                    <div class="member-item">
+                    <div class="column column-third text-center">
                         <p class="member-name">RB. Nghia Mai</p>
                         <img src="./assets/img/fc/nghia.jpg" alt="Image of FC" class="member-img">
                     </div>
-                    <div class="member-item">
+                    <div class="column column-third text-center">
                         <p class="member-name">RW. Minh Duy</p>
                         <img src="./assets/img/fc/duy.jpg" alt="Image of FC" class="member-img">
                     </div>
                     <hr>
                     
-                    <div class="member-item member-item2">
-                        <p class="member-name">LM. Van Cuong</p>
-                        <img src="./assets/img/fc/van cuong.jpg" alt="Image of FC" class="member-img">
-                    </div>
-                    <div class="member-item">
-                        <p class="member-name">ST. Chinh Mai</p>
-                        <img src="./assets/img/fc/chinh mai.jpg" alt="Image of FC" class="member-img">
+                    <div class="member-column-half">
+                        <div class="column text-center">
+                            <p class="member-name">LM. Van Cuong</p>
+                            <img src="./assets/img/fc/van cuong.jpg" alt="Image of FC" class="member-img">
+                        </div>
+                        <div class="column text-center">
+                            <p class="member-name">ST. Chinh Mai</p>
+                            <img src="./assets/img/fc/chinh mai.jpg" alt="Image of FC" class="member-img">
+                        </div>
                     </div>
                     <div class="clear"></div>
                 </div>
             </div>
 
             <!-- Tour section -->
-            <div class="tour-section">
+            <div id="tour" class="tour-section">
                 <div class="content-section">
                     <h2 class="section-heading text-white">SCHEDULE</h2>
                     <p class="section-sub-heading text-white">Remember to book your tickets!</p>
@@ -120,32 +123,32 @@
                     </ul>
 
                     <!-- Places -->
-                    <div class="places-list">
-                        <div class="place-item">
+                    <div class="row places-list">
+                        <div class="column column-third place-item">
                             <img src="./assets/img/places/chelsea.jpg" alt="old trafford stadium" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Lon Don - England</h3>
                                 <p class="place-time">Sat 28 Oct 2022 7:00 pm</p>
                                 <p class="place-desc">FC MaiToc & FC Chelsea</p>
-                                <button class="place-buy-btn js-buy-tickets">Buy Tickets</button>
+                                <button class="btn js-buy-tickets">Buy Tickets</button>
                             </div>
                         </div>
-                        <div class="place-item">
+                        <div class="column column-third place-item">
                             <img src="./assets/img/places/old traford.jpg" alt="old trafford stadium" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Manchester - England</h3>
                                 <p class="place-time">Fri 27 Sep 2022 8:00 pm</p>
                                 <p class="place-desc">FC MaiToc & FC Man United</p>
-                                <button class="place-buy-btn js-buy-tickets">Buy Tickets</button>
+                                <button class="btn js-buy-tickets">Buy Tickets</button>
                             </div>
                         </div>
-                        <div class="place-item">
+                        <div class="column column-third place-item">
                             <img src="./assets/img/places/bernabeu.jpg" alt="old trafford stadium" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Madrid - Spain</h3>
                                 <p class="place-time">Sun 29 Nov 2022 7:00 pm</p>
                                 <p class="place-desc">FC MaiToc & FC Real Madrid</p>
-                                <button class="place-buy-btn js-buy-tickets">Buy Tickets</button>
+                                <button class="btn js-buy-tickets">Buy Tickets</button>
                             </div>
                         </div>
                         <div class="clear"></div>
@@ -154,16 +157,58 @@
 
             </div>
 
-            <!-- Contact section -->
-            <div class="content-section">
-                <h2 class="section-heading">PROFILE</h2>
-                <p class="section-sub-heading">Developer</p>
+            <!-- Begin: Contact section -->
+            <div id="contact" class="content-section">
+                <h2 class="section-heading">CONTACT</h2>
+                <p class="section-sub-heading">Fan? Drop a note!</p>
                 
+                <div class="row contact-content">
+                    <div class="column column-half contact-info">
+                        <p><i class="ti-location-pin"></i>Ha Noi, VN</p>
+                        <p><i class="ti-mobile"></i>Phone: +84 976970175</p>
+                        <p><i class="ti-email"></i>Email: tieumainhi0909@gmail.com</p>
+                    </div>
+                    <div class="column column-half contact-form">
+                        <form action="">
+                            <div class="row">
+                                <div class="column column-half">
+                                    <input type="text" name="" id="" required placeholder="Name" class="form-control">
+                                </div>
+                                <div class="column column-half">
+                                    <input type="email" name="" id="" required placeholder="Email" class="form-control">
+                                </div>
+                                <div class="clear"></div>
+                            </div>
+
+                            <div class="row mt-8">
+                                <div class="column column-full">
+                                    <input type="text" name="" id="" required placeholder="Message" class="form-control">
+                                </div>
+                            </div>
+                            <button type="submit" class="btn mt-16 mbt-112 pull-right">SEND</button>
+                            <div class="clear"></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!-- End: Contact section -->
+
+            <!-- Map section -->
+            <div class="map-section">
+                <img src="./assets/img/map/map.jpg" alt="Map">
             </div>
         </div>
 
         <div id="footer">
-
+            <div class="social-list">
+                <a href=""><i class="ti-facebook"></i></a>
+                <a href=""><i class="ti-instagram"></i></a>
+                <a href=""><i class="ti-youtube"></i></a>
+                <a href=""><i class="ti-twitter"></i></a>
+                <a href=""><i class="ti-linkedin"></i></a>
+                <a href=""><i class="ti-pinterest-alt"></i></a>
+            </div>
+            <p class="copyright">Powered by <a href="">Thang.md</a></p>
         </div>
     </div>
 
