Fix bug responsive

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                 <h3 class="place-heading">Lon Don - England</h3>
                                 <p class="place-time">Sat 28 Oct 2022 7:00 pm</p>
                                 <p class="place-desc">FC MaiToc & FC Chelsea</p>
-                                <button class="btn js-buy-tickets">Buy Tickets</button>
+                                <button class="btn btn-buy-tickets js-buy-tickets s-full-width">Buy Tickets</button>
                             </div>
                         </div>
                         <div class="column column-third s-col-full mt-16">
@@ -147,7 +147,7 @@
                                 <h3 class="place-heading">Manchester - England</h3>
                                 <p class="place-time">Fri 27 Sep 2022 8:00 pm</p>
                                 <p class="place-desc">FC MaiToc & FC Man United</p>
-                                <button class="btn js-buy-tickets">Buy Tickets</button>
+                                <button class="btn btn-buy-tickets js-buy-tickets s-full-width">Buy Tickets</button>
                             </div>
                         </div>
                         <div class="column column-third s-col-full mt-16">
@@ -156,7 +156,7 @@
                                 <h3 class="place-heading">Madrid - Spain</h3>
                                 <p class="place-time">Sun 29 Nov 2022 7:00 pm</p>
                                 <p class="place-desc">FC MaiToc & FC Real Madrid</p>
-                                <button class="btn js-buy-tickets">Buy Tickets</button>
+                                <button class="btn btn-buy-tickets js-buy-tickets s-full-width">Buy Tickets</button>
                             </div>
                         </div>
                         <div class="clear"></div>
@@ -171,18 +171,18 @@
                 <p class="section-sub-heading">Fan? Drop a note!</p>
                 
                 <div class="row contact-content">
-                    <div class="column column-half contact-info">
+                    <div class="column column-half s-col-full contact-info">
                         <p><i class="ti-location-pin"></i>Ha Noi, VN</p>
-                        <p><i class="ti-mobile"></i>Phone: +84 976970175</p>
-                        <p><i class="ti-email"></i>Email: tieumainhi0909@gmail.com</p>
+                        <p><i class="ti-mobile"></i>Phone: <a href="tel:0976970175">+84 976970175</a></p>
+                        <p><i class="ti-email"></i>Email: <a href="mailto:tieumainhi0909@gmail.com">tieumainhi0909@gmail.com</a></p>
                     </div>
-                    <div class="column column-half contact-form">
+                    <div class="column column-half s-col-full contact-form">
                         <form action="">
                             <div class="row">
-                                <div class="column column-half">
+                                <div class="column s-col-full column-half">
                                     <input type="text" name="" id="" required placeholder="Name" class="form-control">
                                 </div>
-                                <div class="column column-half">
+                                <div class="column s-col-full column-half s-mt-8">
                                     <input type="email" name="" id="" required placeholder="Email" class="form-control">
                                 </div>
                                 <div class="clear"></div>
@@ -193,7 +193,7 @@
                                     <input type="text" name="" id="" required placeholder="Message" class="form-control">
                                 </div>
                             </div>
-                            <button type="submit" class="btn mt-16 mbt-112 pull-right">SEND</button>
+                            <button type="submit" class="contact-submit-btn btn mt-16 mbt-112 pull-right s-full-width">SEND</button>
                             <div class="clear"></div>
                         </form>
                     </div>
